--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="/css/style.css">
    <title>Document</title>
 </head>
 
 <body>
-
-
+   <div class="content">fgdfhgf</div>
 </body>
 
 </html>
